--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Maridel Glorioso - Portfolio</title>
     <style>
         body, html {
             height: 100%;
@@ -54,7 +54,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Your Name</h1>
+            <h1>Maridel Glorioso</h1>
             <nav>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -87,7 +87,7 @@
         </section>
 
         <footer>
-            <p>© 2023 by Your Name</p>
+            <p>© Copyright <a href="magwebdevprojects.net" target="_blank">MAGdev</a> 2023 | All Rights Reserve</p>
         </footer>
     </div>
 </body>
