--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                A brief paragraph about yourself, your background, skills, and experience.
+                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in <em>web developing</em>. <emp>Currently learning web development</em>. I love creating user experiences that are both <i>functional and engaging.</i> 
             </p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">Project 1</a>: Short description of the project.</li>
-                <li><a href="#">Project 2</a>: Short description of another project.</li>
+                <li><a href="https://github.com/maglorioso12/githubproject1/edit/main/index.html">Project 1</a>: I have made a simple project.</li>
+                <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source code from Learn Computer Today repo.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
@@ -82,7 +82,7 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                How to reach you: Email, LinkedIn, GitHub, etc.
+                You can reach me at <a href="magloriosowebdev@gmail.com
             </p>
         </section>
 
