--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in <em>web developing</em>. <emp>Currently learning web development</em>. I love creating user experiences that are both <i>functional and engaging.</i> 
+                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in <em>web developing</em>. Currently learning <emp>web development</em>.
             </p>
         </section>
 
