--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
             <p>
-                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in <em>web developing</em>. Currently learning <emp>web development</em>.
+                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in learning <i>codes</i> and <em>programming<\em>. I'm currently learning <emp>web development</em>.
             </p>
         </section>
 
