--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="https://github.com/maglorioso12/githubproject1/edit/main/index.html">Project 1</a>: I have made a simple project.</li>
+                <li><a href="https://github.com/maglorioso12/githubproject1">Project 1</a>: I have made a simple project.</li>
                 <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source code from Learn Computer Today repo.</li>
                 <!-- Add more projects as list items -->
             </ul>
