--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                You can reach me at <a href="magloriosowebdev@gmail.com
+                You can reach me at <a href="magloriosowebdev@gmail.com target="_blank"> magloriosowebdev@gmail.com</a>
             </p>
         </section>
 
         <footer>
-            <p>© Copyright <a href="magwebdevprojects.net" target="_blank">MAGdev</a> 2023 | All Rights Reserve</p>
+            <p>© Copyright mglorioso 2023 | All Rights Reserve</p>
         </footer>
     </div>
 </body>
