--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         <section id="contact">
             <h2>Contact</h2>
             <p>
-                You can reach me at <a href="magloriosowebdev@gmail.com target="_blank"> magloriosowebdev@gmail.com</a>
+                You can reach me at magloriosowebdev@gmail.com
             </p>
         </section>
 
         <footer>
-            <p>© Copyright mglorioso 2023 | All Rights Reserve</p>
+            <p>© Copyright mglorioso 2023</p>
         </footer>
     </div>
 </body>
