--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>
-                You can reach me at magloriosowebdev@gmail.com
-            </p>
+            <p>You can reach me at magloriosowebdev@gmail.com</p>
         </section>
 
         <footer>
-            <p>© Copyright mglorioso 2023</p>
+            <p> © Copyright mglorioso 2023 </p>
         </footer>
     </div>
 </body>
