--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at magloriosowebdev@gmail.com</p>
+            <p>You can reach me at <a href="magloriosowebdev@gmail.com">magloriosowebdev@gmail.com></a> </p>
         </section>
 
         <footer>
