--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         </section>
 
         <footer>
+            <nav>
+	    			 <a href="/html/">Privacy<a/a> |
+	    			 <a href="/css/">Terms<a/a> |
+	  			 <a href="/js/">Website<a/a> |
+	     			 <a href="/phyton/">Home<a/a>
+			</nav>
             <p> © Copyright mglorioso 2023 </p>
         </footer>
     </div>
