--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="magloriosowebdev@gmail.com">magloriosowebdev@gmail.com></a> </p>
+            <p>You can reach me at <a href="magloriosowebdev@gmail.com">magloriosowebdev@gmail.com</a> </p>
         </section>
 
         <footer>
             <nav>
-	    			 <a href="/html/">Privacy<a/a> |
-	    			 <a href="/css/">Terms<a/a> |
-	  			 <a href="/js/">Website<a/a> |
+	    			 <a href="/html/">Privacy<a/a>|
+	    			 <a href="/css/">Terms<a/a>|
+	  			 <a href="/js/">Website<a/a>|
 	     			 <a href="/phyton/">Home<a/a>
 			</nav>
-            <p> © Copyright mglorioso 2023 </p>
+            			<p> © Copyright mglorioso 2023 </p>
         </footer>
     </div>
 </body>
