--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile_picture.jpg" alt="Your Name's Profile Picture" class="profile-pic">
+            <img src="profile_picture.jpg" alt="My Profile Picture" class="profile-pic">
             <p>
                 I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in learning <i>codes</i> and <em>programming</em>. I'm currently learning <em>web development</em>.
             </p>
