--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <header>
             <h1>Maridel Glorioso</h1>
             <nav>
+		<a href="#about">Home</a>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
@@ -66,7 +67,7 @@
             <h2>About Me</h2>
             <img src="profile_picture.jpg" alt="My Profile Picture" class="profile-pic">
             <p>
-                I am an aspiring <strong>Web Developer</strong> and always been <emp>interested in learning <i>codes</i> and <em>programming</em>. I'm currently learning <em>web development</em>.
+                I am an aspiring <strong>Web Designer and Developer</strong> based in Philippines. I always have passion in <emp>technology and design</em>. I am currently learning <em>web development</em>.
             </p>
         </section>
 
@@ -86,12 +87,10 @@
 
         <footer>
             <nav>
-	    		 <a href="/html/">Privacy<a/a>|
-	    		 <a href="/css/">Terms<a/a>|
-	  		 <a href="/js/">Website<a/a>|
-	     		 <a href="/phyton/">Home<a/a>
+	    		 <a href="/html/">Privacy Policy<a/>|
+	    		 <a href="/css/">Terms and Conditions</a>
 	    </nav>
-            	<p> © Copyright mglorioso 2023 </p>
+            	<p> Created and developed by maglorioso © 2023 | Freelance Web Designer and Developer</p>
         </footer>
     </div>
 </body>
