--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <header>
             <h1>Maridel Glorioso</h1>
             <nav>
-		<a href="#about">Home</a>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
+		<a href="#Home"><strong>Home</strong></a>
+                <a href="#About"><strong>About</strong></a>
+                <a href="#projects"><strong>Projects</strong></a>
+                <a href="#Skills"><strong>Skills</strong></a>
             </nav>
         </header>
 
@@ -87,8 +87,10 @@
 
         <footer>
             <nav>
-	    		 <a href="/html/">Privacy Policy<a/>|
-	    		 <a href="/css/">Terms and Conditions</a>
+	    		 <a href="/Privacy/">Privacy Policy<a/>|
+	    		 <a href="/Terms/">Terms and Conditions</a>|
+			 <a href="/Contact/">Contact Us</a>
+				 
 	    </nav>
             	<p> Created and developed by maglorioso © 2023 | Freelance Web Designer and Developer</p>
         </footer>
