--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2>Projects</h2>
             <ul>
                 <li><a href="https://github.com/maglorioso12/githubproject1">Project 1</a>: I have made a simple project.</li>
-                <li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source code from Learn Computer Today repo.</li>
+		<li><a href="https://github.com/LearnComputerToday/githubproject">Project 2</a>: Source code from Learn Computer Today repo.</li>
                 <!-- Add more projects as list items -->
             </ul>
         </section>
@@ -92,7 +92,7 @@
 			 <a href="/Contact/">Contact Us</a>
 				 
 	    </nav>
-            	<p> Created and developed by maglorioso © 2023 | Freelance Web Designer and Developer</p>
+            	<p> Created by maglorioso © 2023 | Freelance Web Designer and Developer</p>
         </footer>
     </div>
 </body>
