--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maridel Glorioso - Portfolio</title>
     <style>
+	    <style>
+	body {
+  		background-image: url("universe.jpg");
+	}
         body, html {
             height: 100%;
             margin: 0;
