--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
 	    <style>
 	body {
-  		background-image: url("universe.jpg");
+  		background-image: https://github.com/maglorioso12/githubproject1/blob/main/universe.jpg("universe.jpg");
 	}
         body, html {
             height: 100%;
