--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+ 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maridel Glorioso - Portfolio</title>
-    <style>
-	    <style>
-	body {
-  		background-image: https://github.com/maglorioso12/githubproject1/blob/main/universe.jpg("universe.jpg");
-	}
-        body, html {
+
+<style>
+	body, html {
             height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
             line-height: 1.6;
-        }
-
+	    background-color: #339DA7;
+);
+	}
         .container {
             display: flex;
             flex-direction: column;
@@ -29,16 +27,17 @@
         }
 
         header {
-            background-color: #f4f4f4;
-            padding: 10px 0;
-            width: 100%;
+            background-color: #339DA7;
+            padding: 5px 1;
+            width: 150%;
             text-align: center;
         }
 
         nav a {
             margin: 0 15px;
-            text-decoration: none;
+            text-decoration: Lato;
             color: #333;
+	    text-align: center;
         }
 
         section {
@@ -52,30 +51,36 @@
             margin: 20px auto;
             display: block;
         }
-    </style>
-</head>
+</style>
 
-<body>
+</head>
+<br/>
+<h3 align="center">
     <div class="container">
         <header>
-            <h1>Maridel Glorioso</h1>
-            <nav>
-		<a href="#Home"><strong>Home</strong></a>
-                <a href="#About"><strong>About</strong></a>
-                <a href="#projects"><strong>Projects</strong></a>
-                <a href="#Skills"><strong>Skills</strong></a>
+<nav>
+		<a href="Home"> <b>Home</b> </a>
+                <a href="About"> <b>About</b> </a>
+                <a href="projects"> <b>Projects</b> </a>
+                <a href="Skills"> <b>Skills</b> </a>
             </nav>
+	<main>
+	<font face="Lato" size="8">
+		
+            <h1>Hi! I'm Maridel</h1> 
+</font>
+            
         </header>
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="profile_picture.jpg" alt="My Profile Picture" class="profile-pic">
+            <img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
             <p>
-                I am an aspiring <strong>Web Designer and Developer</strong> based in Philippines. I always have passion in <emp>technology and design</em>. I am currently learning <em>web development</em>.
+                I am an aspiring <strong>Web Designer and Developer</strong> based in <i>Philippines</i>. I have a passion in technologies related to <em>coding and programming</em>. I am currently enrolled in <strong>Web Development</strong> at <b>Learn Computer Today</b>.
             </p>
         </section>
 
-        <section id="projects">
+        <section id="projects" text-align="justify">
             <h2>Projects</h2>
             <ul>
 		<li><a href="https://github.com/maglorioso12/githubproject1">Project 1</a>: I have made a simple project.</li>
@@ -88,15 +93,16 @@
             <h2>Contact</h2>
             <p>You can reach me at <a href="magloriosowebdev@gmail.com">magloriosowebdev@gmail.com</a> </p>
         </section>
-
-        <footer>
+	</main>
+        <hr></hr>
+	<footer>
             <nav>
 	    		 <a href="/Privacy/">Privacy Policy<a/>|
-	    		 <a href="/Terms/">Terms and Conditions</a>|
+	    		 <a href="/Terms/">Terms and Conditions</a> |
 			 <a href="/Contact/">Contact Us</a>
 				 
 	    </nav>
-            	<p> Created by maglorioso © 2023 | Freelance Web Designer and Developer</p>
+            	<p> Created by maglorioso © 2023 | Aspiring Web Designer and Developer</p>
         </footer>
     </div>
 </body>
