--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
             line-height: 1.6;
-	    background-color: #339DA7;
+	    background-color: #f4f4f4;
 );
 	}
         .container {
