--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
 
         header {
-            background-color: #339DA7;
+            background-color: #E1E9F2 ;
             padding: 5px 1;
             width: 150%;
             text-align: center;
