--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 	<font face="Lato" size="8">
 		
             <h1>Hi! I'm Maridel</h1> 
+	<img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
+            <p>
 </font>
             
         </header>
