--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
 <h3 align="center">
     <div class="container">
         <header>
-		<img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
-            <p>
-<nav>
+            <nav>
 		<a href="Home"> <b>Home</b> </a>
                 <a href="About"> <b>About</b> </a>
                 <a href="projects"> <b>Projects</b> </a>
@@ -69,9 +67,9 @@
 	<main>
 	<font face="Lato" size="8">
 		
-            <h1>Hi! I'm Maridel</h1> 
-	<img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
-            <p>
+            <h1><img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
+            <p> Hi! I'm Maridel </h1> 
+	
 </font>
             
         </header>
