--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<font face="Lato" size="8">
 		
             <h1><img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
-            <p> Hi! I'm Maridel </h1> 
+             Hi! I'm Maridel </h1> 
 	
 </font>
             
