--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 	<main>
 	<font face="Lato" size="8">
 		
-            <h1><img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
-             Hi! I'm Maridel </h1> 
+            <h1><img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">Hi! I'm Maridel</h1> 
 	
 </font>
             
