--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+y<!DOCTYPE html>
 <html lang="en">
 <head>
  
@@ -67,9 +67,9 @@
 	<main>
 	<font face="Lato" size="8">
 		
-            <h1><img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">Hi! I'm Maridel</h1> 
-	
-</font>
+            <h1>Hi! I'm Maridel</h1>
+	<img src="hi-avatar.gif" alt="My Profile Picture" class="profile-pic">
+        </font>
             
         </header>
 
