--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ y<!DOCTYPE html>
         <section id="about">
             <h2>About Me</h2>
            
-                I am an aspiring <strong>Web Designer and Developer</strong> based in <i>Philippines</i>. I have a passion in technologies related to <em>coding and programming</em>. I am currently enrolled in <strong>Web Development</strong> at <b>Learn Computer Today</b>.
+                I am an aspiring <strong>Web Designer and Developer</strong> based in <i>Philippines</i>. I have always been interested in this field and <em>eager to learn coding and programming</em>. I am currently enrolled in <strong>Web Development</strong> at <b>Learn Computer Today</b>.
             </p>
         </section>
 
