--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 y<!DOCTYPE html>
 <html lang="en">
 <head>
+	<style type="text/CSS>
+		table {
+			Borde: 1px solid black;
+		}
+		</style>
  <style>
 	body, html {
             height: 100%;
@@ -74,7 +79,7 @@ y<!DOCTYPE html>
         <section id="about">
             <h2>About Me</h2>
            
-                I am an aspiring <strong>Web Designer and Developer</strong> based in <i>Philippines</i>. I have always been interested in this field and <em>eager to learn coding and programming</em>. I am currently enrolled in <strong>Web Development</strong> at <b>Learn Computer Today</b>.
+                </p>I am an aspiring <strong>Web Designer and Developer</strong> based in <i>Philippines</i>. I have always been interested in this field and <em>eager to learn coding and programming</em>. I am currently enrolled in <strong>Web Development</strong> at <b>Learn Computer Today</b>.
             </p>
         </section>
 
@@ -98,7 +103,7 @@ y<!DOCTYPE html>
 	    		 <a href="/Privacy/">Privacy Policy<a/>|
 	    		 <a href="/Terms/">Terms and Conditions</a> |
 			 <a href="/Contact/">Contact Us</a>
-				 
+	<hr>			 
 	    </nav>
             	<p> Created by maglorioso © 2023 | Aspiring Web Designer and Developer</p>
         </footer>
