--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@ y<!DOCTYPE html>
 			Borde: 1px solid black;
 		}
 		</style>
- <style>
-	body, html {
+ 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maridel Glorioso - Portfolio</title>
+	<style>
+	   body, html {
             height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
             line-height: 1.6;
 	    background-color: #E1E9F2 ;
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maridel Glorioso - Portfolio</title>
 );
 	}
         .container {
@@ -103,7 +104,7 @@ y<!DOCTYPE html>
 	    		 <a href="/Privacy/">Privacy Policy<a/>|
 	    		 <a href="/Terms/">Terms and Conditions</a> |
 			 <a href="/Contact/">Contact Us</a>
-	<hr>			 
+	<hr width="70%>			 
 	    </nav>
             	<p> Created by maglorioso © 2023 | Aspiring Web Designer and Developer</p>
         </footer>
