--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ y<!DOCTYPE html>
 <head>
 	<style type="text/CSS>
 		table {
-			Borde: 1px solid black;
+			Border: 1px solid black;
 		}
 		</style>
  
@@ -17,8 +17,7 @@ y<!DOCTYPE html>
             margin: 0;
             font-family: Arial, sans-serif;
             line-height: 1.6;
-	    background-color: #E1E9F2 ;
-);
+	    background-color: #E1E9F2;
 	}
         .container {
             display: flex;
