--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 	<footer>
 		<hr width="80%>	
             <nav>
-	    		 <a href="/Privacy/">Privacy Policy<a/> |
-	    		 <a href="/Terms/">Terms and Conditions</a> |
-			 <a href="/Contact/">Contact Us</a>
+	    		 <a href="Privacy">Privacy Policy<a/> |
+	    		 <a href="Terms">Terms and Conditions</a> |
+			 <a href="Contact">Contact Us</a>
 	    </nav>	 
             	<p>Created by maglorioso © 2023 | Aspiring Web Designer and Developer</p>
         </footer>
